* vm_eval.c (check_funcall): try respond_to? first if redefined.   [Bug #5158]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@32855 b2dd03c8-39d4-4d8f-98ff-823fe69b080e