test/ruby/test_proc.rb
@@ -787,7 +787,7 @@ class TestProc < Test::Unit::TestCase
   end
 
   def test_splat_without_respond_to
-    def (obj = Object.new).respond_to?(m); false end
+    def (obj = Object.new).respond_to?(m,*); false end
     [obj].each do |a, b|
       assert_equal([obj, nil], [a, b], '[ruby-core:24139]')
     end
